# telegram_bot

./: .gitignore  LICENSE  README.md  bot.py  business_psychology.py  business_psychology_config.py  config.py  crypto_main.py  fetch_all_data.py  main.py  openAI.py  pyproject.toml  quote_of_the_day.py  quote_of_the_day_config.py  word_quiz.py
.githooks/: pre-push
LLMs/: factory.py  llm_interface.py  openAI.py  openRouter.py  utils.py
config/: business_psychology_config.py  crypto_config.py  quote_of_the_day_config.py  word_quiz_config.py
crypto/: calculations.py  data_analysis.py  data_visualisation.py  get_btc_data.py
telegram_service/: bot.py
tests/: test_calculations.py  test_evaluate_answers.py  test_get_btc_data.py  test_llms_utils.py  test_quote_of_the_day.py  test_telegram_service.py
