[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["stefan dragicevic <stefan.dragicevic@vegait.rs>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^22.3"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
